<resources>
    <string name="app_name">Duelit</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">The email address is invalid</string>
    <string name="error_invalid_password">Password must be longer than 8 characters, and include at least one uppercase and one number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="action_facebook_login">Login With Facebook</string>
    <string name="action_create_account">Create an Account</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_facebook_sign_up">Sign Up With Facebook</string>
    <string name="action_already_have_account">Already have an account? Login</string>
    <string name="title_activity_main_tabbed">Home Screen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="games">Games</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="recently_played">Recently Played</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Duelit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="credits_abbreviation">CR</string>
    <string name="get_credits">Get Coins</string>
    <string name="more_games">More Games</string>
    <string name="transactions">Transactions</string>
    <string name="off">off</string>
    <string name="challenge">Challenge</string>
    <string name="find_friends">Find Friends</string>
    <string name="search_title">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="basic_information">Basic Information</string>
    <string name="private_information">Private Information</string>
    <string name="invite">Invite</string>
    <string name="invite_friend_legend">For every friend you invite, you will get:</string>
    <string name="send_promo_code">Send the promo code below:</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="share">Share</string>
    <string name="practice">Practice</string>
    <string name="tournament">Tournament</string>
    <string name="done">Done</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New password, again</string>
    <string name="password">Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="send_email">Send Email</string>
    <string name="where_are_you">Where are you?</string>
    <string name="verify_location_legend">We need to verify that you are in a location that allows you to play Duelit games.</string>
    <string name="title_activity_choose_location">Choose Location</string>
    <string name="select_country">Select Country</string>
    <string name="next">Next</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="verify_age_legend">We need to verify that you are old enough to play Duelit games.</string>
    <string name="select_age">Select Age</string>
    <string name="reset_password_success">Check your email and follow the instructions to reset your password.</string>
    <string name="select_state">Select State</string>
    <string name="go_back_discard_changes_message">If you go back your changes won\'t be saved.</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="leave_tournament_message_cancel">Leave</string>
    <string name="go_back_discard_changes_message_cancel">Stay</string>
    <string name="go_back_discard_changes_message_ok">Discard</string>
    <string name="sign_up_success_message">You signed up successfully. Check your email.</string>
    <string name="error_fill_all_fields">Please fill all required fields.</string>
    <string name="error_age_less_than_eight">Age can\'t be less than 8.</string>
    <string name="error_age_greater_than_max">Age can\'t be greater than 99.</string>
    <string name="error_fill_state">Please select a state.</string>
    <string name="error_age_invalid">Please enter a valid age.</string>
    <string name="error_invalid_country">Please enter a valid country.</string>
    <string name="error_invalid_state">Please enter a valid US state.</string>
    <string name="title_activity_choose_user_data">ChooseUserDataActivity</string>
    <string name="error_password_dont_match">Passwords don\'t match.</string>
    <string name="wrong_current_password">The current password you entered is wrong.</string>
    <string name="error_password_not_valid">Password must have at least 8 characters, and a number.</string>
    <string name="error_image_not_uploaded">Couldn\'t change your profile pictureURL, try again!</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="login_sd_card_permission_denied">Without permissions, Duelit won\'t be able to retrieve your Facebook image.</string>
    <string name="warning">Warning</string>
    <string name="result_accepted_friend_request">You are now friends with %1$s</string>
    <string name="friend">Friend</string>
    <string name="request_sent">Request Sent</string>
    <string name="request_received">Request Received</string>
    <string name="result_sent_friend_request">Sent request to %1$s</string>
    <string name="cancel_request">Cancel</string>
    <string name="grant_access">Grant Access</string>
    <string name="change_profile_image_rationale">To change your image, the app needs access to your photos.</string>
    <string name="change_profile_image_permission_denied">Can\'t change profile image without access to device storage.</string>
    <string name="tournaments">Tournaments</string>
    <string name="action_credits">Get Coins</string>
    <string name="action_profile">Profile</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="play">Play</string>
    <string name="tournament_started">Tournament started...</string>
    <string name="open">Open</string>
    <string name="tournament_created_by_you">Created by you</string>
    <string name="invited_by">Invited by</string>
    <string name="starting_in">Starting in</string>
    <string name="come_back_later_will_notify_you">Come back later, we will notify you.</string>
    <string name="starts_at">Starts at</string>
    <string name="start">Start</string>
    <string name="no_tournaments_message">You don\'t have any tournaments yet!</string>
    <string name="start_tournament_instructions">Tap on \"Games\" to start a tournament with your friends</string>
    <string name="leave">Forfeit</string>
    <string name="alert">Alert</string>
    <string name="leave_tournament_dialog_message">If you continue you will automatically lose the match and will not be able to rejoin. You can press the back arrow if you want to leave and come back later.</string>
    <string name="firebase_error_dialog_message">There was an error, please try again (error code: 300).</string>
    <string name="error_dialog_message">There was an error, please try again.</string>
    <string name="select_one_or_more_players">Select one or more players to invite</string>
    <string name="play_with_selected_players">Play against %1$s players</string>
    <string name="history">History</string>
    <string name="my_coins">My Coins</string>
    <string name="tournament_cancelled_dialog_message">This tournament was cancelled because nobody joined. Join or create a new one!</string>
    <string name="generic_dialog_ok_button">OK</string>
    <string name="notification_tournament_started">A tournament has started</string>
    <string name="invited_you_to_play">%1$s invited you to play %2$s</string>
    <string name="will_be_charged_when_tournament_starts">You will be charged when tournament starts</string>
    <string name="register_device_error_message">There was a problem registering your device. Please sign in again.</string>
    <string name="no_open_tournaments_message">There aren\'t any Duelit tournaments at the moment.</string>
    <string name="enter">Enter</string>
    <string name="waiting_results">Waiting for results...</string>
    <string name="open_tournaments">Duelit Tournaments</string>
    <string name="tournament_ended_dialog_message">This tournament has ended.</string>
    <string name="participants">Participants:</string>
    <string name="capacity">Capacity:</string>
    <string name="prize">Prize</string>
    <string name="enter_open_tournament_confirm">You will only be charged the entry fee if the tournament reaches the minimum capacity.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_want_join">Are you sure you want to join?</string>
    <string name="forfeited_tournament">You didn\'t play the challenge.</string>
    <string name="exit">Exit</string>
    <string name="loading_game">Loading your game...</string>
    <string name="error">Error</string>
    <string name="nexa_font_light">Nexa_Light.otf</string>
    <string name="coins">Coins</string>
    <string name="how_to_play">How to play?</string>
    <string name="time_left">Time left:</string>
    <string name="game_tutorial_challenge_timer_instructions">You have one minute to complete the challenge !</string>
    <string name="close">Close</string>
    <string name="tutorial_first_login_1_txt_1">Access all available games, popular and recently played ones.</string>
    <string name="tutorial_first_login_1_txt_2">Access all the tournaments you’ve been invited to. Accept invitations, open the game or simply check your history.</string>
    <string name="tutorial_first_login_1_txt_3">Access your friend list and other duelit users and add them as your friends. Invite your own friends to be part of the Duelit experience.</string>
    <string name="tutorial_first_login_1_txt_4">Check transaction activity and available coins.</string>
    <string name="tutorial_first_login_1_txt_5">Access tournaments you can play right away!</string>
    <string name="tutorial_first_login_1_txt_6">Access and edit your personal and cash out information.</string>
    <string name="tutorial_first_login_1_txt_7">Buy coins to start enjoying challenges and tournaments .</string>
    <string name="throw_ball_score">Throw the ball and score</string>
    <string name="game_tutorial_cups_instructions_1">Throw the balls and try to land them in the red cups to earn points. Each row gives you different scores.</string>
    <string name="game_tutorial_cups_instructions_2">The further the cup, the more points you make. By bouncing the ball you can double the points.</string>
    <string name="game_tutorial_cups_instructions_3">Before throwing, you can manage the strength and direction of the ball by seeing the blue bar.</string>
    <string name="strength_direction">Strength - Direction</string>
</resources>