<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentTutorial"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/view_min_height"
            android:layout_height="@dimen/view_min_height"
            android:layout_gravity="right"
            android:src="@drawable/close_icon"
            android:tag="CLOSE" />

        <LinearLayout
            android:id="@+id/tutorial_game_cups_step_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/how_to_play"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_big_2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:minHeight="430dp"
                android:minWidth="@dimen/tutorial_img_min_width"
                android:src="@drawable/tutorial_game_cups_step_1"
                android:tag="VIEW_TAG_FILL_PARENT" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/throw_ball_score"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/game_tutorial_cups_instructions_1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size"
                app:fontName="@string/nexa_font_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tutorial_game_cups_step_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:minHeight="430dp"
                android:minWidth="@dimen/tutorial_img_min_width"
                android:src="@drawable/tutorial_game_cups_step_2"
                android:tag="VIEW_TAG_FILL_PARENT" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/game_tutorial_cups_instructions_2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size"
                app:fontName="@string/nexa_font_light" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/strength_direction"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/game_tutorial_cups_instructions_3"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size"
                app:fontName="@string/nexa_font_light" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/tutorial_game_cups_step_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <ImageView
                android:id="@+id/img_tutorial_game_cups_step_3"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:baselineAlignBottom="true"
                android:src="@drawable/tutorial_game_cups_step_3"
                android:tag="VIEW_TAG_FILL_PARENT" />

            <ImageView
                android:id="@+id/img_tutorial_game_cups_step_3_arrow_1"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_alignRight="@+id/img_tutorial_game_cups_step_3"
                android:layout_below="@+id/img_tutorial_game_cups_step_3"
                android:src="@drawable/tutorial_game_fruit_smash_step_3_arrow_1" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/txt_title_game_tutorial_cups_instructions_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_tutorial_game_cups_step_3_arrow_1"
                android:text="@string/time_left"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_game_tutorial_cups_instructions_2"
                android:layout_gravity="left"
                android:text="@string/game_tutorial_challenge_timer_instructions"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/game_tutorial_instructions_txt_size"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            layout="@layout/tutorial_game_rank_instructions_layout_1" />

        <com.duelit.utils.views.FontButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:background="@drawable/button_default"
            android:tag="CLOSE"
            android:text="@string/close"
            android:textSize="@dimen/game_tutorial_instructions_txt_size" />
    </LinearLayout>
</ScrollView>