<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentTutorial"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <com.duelit.utils.views.FontTextView
        android:id="@+id/tutorial_first_login_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:minHeight="@dimen/view_min_height"
        android:minWidth="@dimen/view_min_height"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/dingding_brand_profile_white" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/profile"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view15"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/tutorial_first_login_1_txt_6"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/dingding_brand_coins_white" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/coins"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view16"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/tutorial_first_login_1_txt_7"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

    </LinearLayout>

    <com.duelit.utils.views.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_tutorial_first_login_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/open_tournaments"
        android:textColor="@color/colorPrimary" />

    <com.duelit.utils.views.FontTextView
        android:id="@+id/txt_tutorial_first_login_logo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_tutorial_first_login_arrow"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/tutorial_first_login_1_txt_5"
        android:textColor="@color/colorPrimary"
        app:fontName="@string/nexa_font_light" />

    <ImageView
        android:id="@+id/img_tutorial_first_login_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_tutorial_first_login_logo"
        android:layout_alignEnd="@+id/img_tutorial_first_login_logo"
        android:layout_alignLeft="@+id/img_tutorial_first_login_logo"
        android:layout_alignRight="@+id/img_tutorial_first_login_logo"
        android:layout_alignStart="@+id/img_tutorial_first_login_logo"
        android:minHeight="@dimen/bottom_bar_logo_size"
        android:src="@drawable/line" />

    <ImageView
        android:id="@+id/img_tutorial_first_login_logo"
        android:layout_width="@dimen/bottom_bar_logo_size"
        android:layout_height="@dimen/bottom_bar_logo_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:src="@drawable/group_copy" />

</RelativeLayout>