<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentTutorial"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/tutorial_first_login_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:minHeight="@dimen/view_min_height"
        android:minWidth="@dimen/view_min_height"
        android:src="@drawable/right_white_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/dingding_brand_games_inactive" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/games"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view15"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/tutorial_first_login_1_txt_1"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/tournaments" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/tournaments"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view16"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/tutorial_first_login_1_txt_2"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/dingding_brand_friends_inactive" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:text="@string/friends"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view17"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:text="@string/tutorial_first_login_1_txt_3"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:minHeight="@dimen/view_min_height_2"
                android:minWidth="@dimen/view_min_height_2"
                android:src="@drawable/dingding_brand_activity_inactive" />

            <com.duelit.utils.views.FontTextView
                android:id="@+id/view18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:text="@string/activity"
                android:textColor="@color/colorPrimary" />

            <com.duelit.utils.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view18"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:text="@string/tutorial_first_login_1_txt_4"
                android:textColor="@color/colorPrimary"
                app:fontName="@string/nexa_font_light" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>